@@ -2,18 +2,19 @@
 # Pornmovies VideoPortal
 ########################################################
 start=http://www.pornomovies.com/video/list/recent
-catcher=getvids.de
+catcher=simple-match
 ########################################################
 # Videos
 ########################################################
-item_infos=title="[^"]+">.+?<img src="([^"]+)" alt="([^"]+)" class="videothumb" id="[^"]+" onmouseover="[^"]+" onmouseout="[^"]+"/>.+?Length: <span><a href="([^"]+)" title="[^"]+">(\d+:\d+)</a></span>
+item_infos=title="[^"]+">.+?<img src="([^"]+)" alt="([^"]+)" class="videothumb" id="[^"]+" onmouseover="[^"]+" onmouseout="[^"]+"/>.+?Length: <span><a href="[^"]+/(\d+)-[^"]+" title="[^"]+">(\d+:\d+)</a></span>
 item_order=icon|title|url|title.append
 item_info_name=title.append
 item_info_build= (%s)
 item_info_name=type
 item_info_build=video
-item_url_build=http://pornomovies.com/%s
+item_url_build=http://pornomovies.com/test/list3.php?v=93/%s
 ########################################################
+# Search results video listing
 item_infos=<img src="([^"]+)" alt="" align="[^"]+" class="[^"]+" /></a><span class="[^"]+" id="[^"]+" ></span><span><a href="([^"]+)">([^"]+)</a></span><br>[^"]+<a.+?Length: <span>(\d+ Min \d+ Sec).+?</span>
 item_order=icon|url|title|title.append
 item_info_name=title.append
